# send-the-raven

./: .buildinfo  .gitignore  .pdm-python  CNAME  Makefile  README.md  README.rst  api.html  contribute.html  coverage.xml  docs_pages.yaml  example.html  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.doctrees/: api.doctree  contribute.doctree  environment.pickle  example.doctree  index.doctree
.doctrees/_autosummary/: send_the_raven.address.Address.doctree  send_the_raven.address.Addresses.doctree  send_the_raven.address.Placemapper.doctree  send_the_raven.address.compare.doctree  send_the_raven.address.doctree  send_the_raven.geoaddress.GeoAddress.doctree  send_the_raven.geoaddress.Geocoder.doctree  send_the_raven.geoaddress.doctree  send_the_raven.utils.clean_string.doctree  send_the_raven.utils.doctree  send_the_raven.utils.generate_id.doctree  send_the_raven.utils.split_into_n_elements.doctree  send_the_raven.validator.Validator.doctree  send_the_raven.validator.doctree
.github/workflows/: doc-pages.yml  python-publish.yml
_autosummary/: send_the_raven.address.Address.html  send_the_raven.address.Addresses.html  send_the_raven.address.Placemapper.html  send_the_raven.address.compare.html  send_the_raven.address.html  send_the_raven.geoaddress.GeoAddress.html  send_the_raven.geoaddress.Geocoder.html  send_the_raven.geoaddress.html  send_the_raven.utils.clean_string.html  send_the_raven.utils.generate_id.html  send_the_raven.utils.html  send_the_raven.utils.split_into_n_elements.html  send_the_raven.validator.Validator.html  send_the_raven.validator.html
_modules/: index.html
_sources/: api.rst  contribute.rst  index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
examples/: Get Long Lat.py  Validate USPS.py  Working with Address.py
send_the_raven/: address.py  geoaddress.py  states, cities, zipcodes.json  usps.py  utils.py  validator.py
source/: conf.py  contribute.rst  example.rst  index.rst
tests/: test_address.py  test_geoaddress.py  test_usps.py  test_utils.py
(+24 files in other folders)
