[tool.poetry]
name = "send-the-raven"
version = "0.1.0"
description = "A collection of toolkit and algorithms for handling US addresses"
authors = ["Bang Koboi <TheManHimself@jimmyganteng.com>"]
readme = "README.md"
packages = [{include = "send_the_raven"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest --cov=send_the_raven"