[tool.poetry]
name = "send-the-raven"
version = "0.1.0"
description = "A collection of toolkit and algorithms for handling US addresses"
authors = ["Bang Koboi <TheManHimself@jimmyganteng.com>"]
readme = "README.md"
packages = [{include = "send_the_raven"}]
include = ["send_the_raven/state and us cities.json"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
usaddress-scourgify = "^0.5.1"
xmltodict = "^0.13.0"
aiohttp = "^3.8.5"
asyncio = "^3.4.3"
geopy = "^2.4.0"

[tool.poe.tasks]
test.cmd  = "pytest"
test.envfile = ".env.dev"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
coverage = "^7.2.7"
pydata-sphinx-theme = "^0.13.3"
poethepoet = "^0.22.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"